fix:recipes details

--- a/main.html
+++ b/main.html
@@ -53,11 +53,11 @@
 				<p class="d-inline">○○△△</p>
 			</div>
 			<div class="col-3">
-				<img src="img/king2.png" width="40px" alt="ランク1">
+				<img src="img/king2.png" width="40px" alt="ランク2">
 				<p class="d-inline">○○△△</p>
 			</div>
 			<div class="col-3">
-				<img src="img/king3.png" width="40px" alt="ランク1">
+				<img src="img/king3.png" width="40px" alt="ランク3">
 				<p class="d-inline">○○△△</p>
 			</div>
 		</div>
@@ -88,15 +88,13 @@
 				<div class="col-sm-6">
 					<img src="img/3416847_s.jpg" width="100%" alt="ベーコンアスパラ">
 				</div>
-				<div class="col-sm-6 mt-3 pl-4">
-					<p>アスパラベーコン巻き</p>
-					<p>○○△△</p>
-					<div class="row">
-						<div class="col-sm-4 mb-3">
-							<img src="img/good!.png" width="40px" alt="いいね">
-							<p class="d-inline">3</p>
-						</div>
-						<div class="col-sm-8">
+				<div class="col-sm-6 mt-3">
+					<div class="details mx-auto">
+						<p>アスパラベーコン巻き</p>
+						<p>○○△△</p>
+						<div class="text-center">
+							<img src="img/good!.png" width="35px" alt="いいね">
+							<span class="mr-2">3</span>
 							<button class="challenge-button px-4">みんなの作ってみた</button>			
 						</div>
 					</div>
