fix:recipes details

--- a/main.html
+++ b/main.html
@@ -88,16 +88,12 @@
 				<div class="col-sm-6">
 					<img src="img/3416847_s.jpg" width="100%" alt="ベーコンアスパラ">
 				</div>
-				<div class="col-sm-6 mt-3">
-					<div class="details mx-auto">
-						<p>アスパラベーコン巻き</p>
-						<p>○○△△</p>
-						<div class="text-center">
-							<img src="img/good!.png" width="35px" alt="いいね">
-							<span class="mr-2">3</span>
-							<button class="challenge-button px-4">みんなの作ってみた</button>			
-						</div>
-					</div>
+				<div class="col-sm-4 mt-3 mx-auto">
+					<p>アスパラベーコン巻き</p>
+					<p>○○△△</p>
+					<img src="img/good!.png" width="40px" alt="いいね">
+					<span class="mr-2">3</span>
+					<button class="challenge-button px-4">みんなの作ってみた</button>			
 				</div>
 				<div class="w-100 mt-5 text-center">
 					<a href="#" class="pagenation mb-0">＜ 1 2 3 ...  ＞</a>
