--- a/main.html
+++ b/main.html
@@ -46,21 +46,21 @@
 <!--ここに中身をいれる-->
 <div class="main">
 	<div class="ml-2">
-		<div class="ranking row pt-3">
-			<p class="ranking-title d-inline col-3">いいね獲得ランキング</p>
-			<div class="col-3">
+		<nav class="navbar navbar-expand ranking row pt-3">
+			<p class="ranking-title d-inline col-sm-3">いいね獲得ランキング</p>
+			<div class="col-sm-3">
 				<img src="img/king1.png" width="40px" alt="ランク1">
-				<p class="d-inline">○○△△</p>
+				<a href="#">○○△△</a>
 			</div>
-			<div class="col-3">
+			<div class="col-3 d-none d-sm-block">
 				<img src="img/king2.png" width="40px" alt="ランク2">
-				<p class="d-inline">○○△△</p>
+				<a href="#">○○△△</a>
 			</div>
-			<div class="col-3">
+			<div class="col-3 d-none d-sm-block">
 				<img src="img/king3.png" width="40px" alt="ランク3">
-				<p class="d-inline">○○△△</p>
+				<a href="#">○○△△</a>
 			</div>
-		</div>
+		</nav>
 	</div>
 	<div class="card my-5 mx-3 border-white">
 		<div class="card-body">
@@ -93,7 +93,8 @@
 					<p>○○△△</p>
 					<img src="img/good!.png" width="40px" alt="いいね">
 					<span class="mr-2">3</span>
-					<button class="challenge-button px-4">みんなの作ってみた</button>			
+					<button class="challenge-button">みんなの作ってみた</button>
+					<!--<button class="challenge-button px-4">みんなの作ってみた</button>-->
 				</div>
 				<div class="w-100 mt-5 text-center">
 					<a href="#" class="pagenation mb-0">＜ 1 2 3 ...  ＞</a>
