--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -82,9 +82,27 @@
       </div>
     </div>
     <div class="container">
-      <p></p>
+      <div class="row mt-4">
+        <div class="col-sm-8">
+          <div class="repsipe_details text-center">
+            <p>アスパラのベーコン巻き</p>
+            <img class="resipe_detail_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="everyone_resipe text-center">
+            <p>みんなの作ってみた</p>
+            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+            <p>投稿者名</p>
+            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+            <p>投稿者名</p>
+            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+            <p>投稿者名</p>
+          </div>
+        </div>
+      </div>
     </div>
-
+  </div>
 
     <!--終了-->
     <!--↓ここからフッター↓ー-->
