--- a/mock/resipi_toukou-1.html
+++ b/mock/resipi_toukou-1.html
@@ -94,9 +94,11 @@
     ​
     <div class="container">
       <div class="row">
-        <div class="col-md-11 offset-md-1">
+        <div class="col-md-4 offset-md-1">
           <h4>レシピの投稿</h4>
         </div>
+        < class="col-md-5">
+        </>
 
 
         <div class="col-md-4 offset-md-1">
@@ -171,7 +173,6 @@
           <label for="count">2.　</label>
           <input type="text" placeholder="">
         </div>
-
         <div class="col-md-8">
           <input type="text" placeholder="">
         </div>
@@ -367,6 +368,8 @@
     <div class="parent">
       <button type="submit">送信する</button>
     </div>
+
+    
     
     <!--終了-->
     <!--↓ここからフッター↓ー-->
