修正ページ追加

--- a/madePost/madePost.html
+++ b/madePost/madePost.html
@@ -13,10 +13,10 @@
   <main>
     <!-- !いいね獲得ランキング -->
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row justify-content-center" >
-        <div class=" card rounded col-10">
-          <div class="card-body col-10 my-3">
+        <div class=" card col-md-10 rounded">
+          <div class="card-body col-md-10 my-3">
             <h3 class="mb-5">作ってみた投稿</h3>
 
             <form action="">
@@ -33,7 +33,7 @@
               <div class="form-group my-5">
                 <label for="name">お名前</label>
                 <button class="needbtn ml-4">必須</button>
-                <input type="text" id="name" class="form-control col-4">
+                <input type="text" id="name" class="form-control col-md-8">
               </div>
               <div class="text-center my-5">
                 <button type="submit">送信</button>
