--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -72,42 +72,43 @@
   <!--↑ここまでヘッダー↑-->
 
   <!--ここに中身をいれる-->
-  ​<div class="main">   ​
-    <div class="search_area">
-      <div class="row align-items-center">
-        <input type="text" class="search_form form-control col-sm-3 offset-4 rounded-5 mt-1">
-        <span class="ml-3">
-          <button type="button" class="search_button mt-1 py-2">検索</button>
-        </span>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row mt-4">
-        <div class="col-sm-8">
-          <div class="repsipe_details text-center">
-            <p>アスパラのベーコン巻き</p>
+  <div class="search_area">
+    <form class="row align-items-center">
+      <input type="text" class="search_form form-control col-3 offset-4 rounded-5 mt-1">
+      <span class="ml-3">
+        <button type="button" class="search_button mt-1 py-2">検索</button>
+      </span>
+    </form>
+  </div>
+  <div class="container">
+    <div class="row mt-4">
+      <div class="col-sm-9">
+        <div class="repsipe_details">
+
+          <p class="mt-3 ml-4">アスパラのベーコン巻き</p>
+          <div class="text-center">
             <img class="resipe_detail_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="everyone_resipe text-center">
-            <p>みんなの作ってみた</p>
-            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-            <p>投稿者名</p>
-            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-            <p>投稿者名</p>
-            <img class="other_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-            <p>投稿者名</p>
-          </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="everyone_resipe text-center">
+          <p>みんなの作ってみた</p>
+          <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+          <p>投稿者名</p>
+          <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+          <p>投稿者名</p>
+          <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+          <p>投稿者名</p>
         </div>
       </div>
     </div>
   </div>
 
-    <!--終了-->
-    <!--↓ここからフッター↓ー-->
-    <div class="footer">
-      <p>©QuestAcademia-Team White</p>
-    </div>
+  <!--終了-->
+  <!--↓ここからフッター↓ー-->
+  <div class="footer">
+    <p>©QuestAcademia-Team White</p>
+  </div>
 </body>
 </html>
