--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -87,7 +87,18 @@
 
           <p class="mt-3 ml-4">アスパラのベーコン巻き</p>
           <div class="text-center">
-            <img class="resipe_detail_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+            <img class="resipe_detail_image mb-5" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
+          </div>
+          <div class="text-center">
+            <span>
+              <img class="cooking_time_icon" src="img/time1.png" alt="調理時間">
+            </span>
+            <span>
+              <img class="liquor_icon" src="img/アセット 64.png" alt="合うお酒">
+            </span>
+            <span>
+              <button type="button" class="create_button mt-1 py-2">投稿</button>
+            </span>
           </div>
         </div>
       </div>
