--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -83,13 +83,13 @@
   <div class="container">
     <div class="row mt-4">
       <div class="col-sm-9">
-        <div class="repsipe_details">
+        <div class="repsipe_details mb-5">
 
-          <p class="mt-3 ml-4">アスパラのベーコン巻き</p>
+          <p class="resipe_title mt-3 ml-4">アスパラのベーコン巻き</p>
           <div class="text-center">
             <img class="resipe_detail_image mb-5" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
           </div>
-          <div class="text-center">
+          <div class="text-center mb-5">
             <span>
               <img class="cooking_time_icon" src="img/time1.png" alt="調理時間">
             </span>
@@ -99,6 +99,21 @@
             <span>
               <button type="button" class="create_button mt-1 py-2">投稿</button>
             </span>
+          </div>
+          <div class="mb-5">
+            <p class="process_bar">材料</p>
+            <div class="material_content mt-4 pb-2 d-flex justify-content-between">
+              <span class="material_name">アスパラ</span>
+              <span class="material_amount">５本</span>
+            </div>
+            <div class="material_content mt-4 pb-2 d-flex justify-content-between">
+              <span class="material_name">ベーコン</span>
+              <span class="material_amount">５枚</span>
+            </div>
+            <div class="material_content mt-4 pb-2 d-flex justify-content-between">
+              <span class="material_name">こしょう</span>
+              <span class="material_amount">少々</span>
+            </div>
           </div>
         </div>
       </div>
