--- a/mock/index.html
+++ b/mock/index.html
@@ -1,85 +1,128 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Quicksand:wght@600&display=swap"
-    rel="stylesheet">
-  <title></title>
-  <style type="text/css">
-    <!--
-    -->
-  </style>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="css/main.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Quicksand:wght@600&display=swap"
+            rel="stylesheet"
+        />
+        <title></title>
+        <style type="text/css">
+            <!--
+            -->
+        </style>
+    </head>
 
-<body>
-  <div class="header">
-    <div class="logo">
-      <div class="site-logo">
-        <h1><a href="#"><img src="img/oTosHi.png" width="150" height="50" alt="otoshiロゴ"></a></h1>
-      </div>
-    </div>
-    <div class="navigation">
-      <nav class="menu-navigation">
-        <ul>
-          <li><a href="#">ログイン</a></li>
-          <li>
-            <div class="header-logo-menu">
-              <div id="nav-drawer">
-                <input id="nav-input" type="checkbox" class="nav-unshown">
-                <label id="nav-open" for="nav-input"><span></span></label>
-                <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-                <div id="nav-content">
-                  <ul>
-                    <li><a href="#01">マイページ</a></li>
-                    <li><a href="#02">TOP</a></li>
-                    <li><a href="#02">レシピ一覧</a></li>
-                  </ul>
+    <body>
+        <div class="header">
+            <div class="logo">
+                <div class="site-logo">
+                    <h1>
+                        <a href="#"
+                            ><img
+                                src="img/oTosHi.png"
+                                width="150"
+                                height="50"
+                                alt="otoshiロゴ"
+                        /></a>
+                    </h1>
                 </div>
-              </div>
-
             </div>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-  <!--↑ここまでヘッダー↑-->
-  ​
-  <!--ここに中身をいれる-->
-  ​<div class="container">
-    <div class="row">
-      <div class="paise col-md-2">
-        <p>登録情報</p>
-        <p>ニックネームを変更する</p>
-        　　 <p>パスワードを変更する</p>
+            <div class="navigation">
+                <nav class="menu-navigation">
+                    <ul>
+                        <li><a href="#">ログイン</a></li>
+                        <li>
+                            <div class="header-logo-menu">
+                                <div id="nav-drawer">
+                                    <input
+                                        id="nav-input"
+                                        type="checkbox"
+                                        class="nav-unshown"
+                                    />
+                                    <label id="nav-open" for="nav-input"
+                                        ><span></span
+                                    ></label>
+                                    <label
+                                        class="nav-unshown"
+                                        id="nav-close"
+                                        for="nav-input"
+                                    ></label>
+                                    <div id="nav-content">
+                                        <ul>
+                                            <li>
+                                                <a href="#01">マイページ</a>
+                                            </li>
+                                            <li><a href="#02">TOP</a></li>
+                                            <li>
+                                                <a href="#02">レシピ一覧</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!--↑ここまでヘッダー↑-->
+        ​
+        <!--ここに中身をいれる-->
+        ​
+        <div class="container">
+            <div class="row">
+                <div class="paise col-md-2">
+                    <p>登録情報</p>
+                    <p>ニックネームを変更する</p>
+                    <p>パスワードを変更する</p>
 
+                    <p>〇〇△△</p>
+                    <p>パスワードを変更する</p>
+                </div>
 
-
-        <p>〇〇△△</p>
-        <p>パスワードを変更する</p>
-      </div>
-
-      <div class=" col-sm-10">
-        <p>〇〇△△が投稿したリスト</p>
-        <p><img src="img/3416847_s.jpg" alt="">アスパラベーコン巻き〇〇△△</p>
-        <a href="#" class="btn btn-outline-primary">投稿リスト一覧</a>
-        <p>いいねリスト</p>
-        <p><img src="img/3416847_s.jpg" alt="">アスパラベーコン巻き〇〇△△</p>
-        <a href="#" class="btn btn-outline-primary">いいねリスト一覧</a>
-      </div>
-    </div>
-  </div>
-  ​
-  <!--終了-->
-  ​
-  <!--↓ここからフッター↓ー-->
-  <div class="footer">
-    <p>©QuestAcademia-Team White</p>
-  </div>
-</body>
+                <div class="col-sm-10">
+                    <p>〇〇△△が投稿したリスト</p>
+                    <p>
+                        <img
+                            src="img/3416847_s.jpg"
+                            alt=""
+                        />アスパラベーコン巻き〇〇△△
+                    </p>
+                    <a href="#" class="btn btn-outline-primary"
+                        >投稿リスト一覧</a
+                    >
+                    <p>いいねリスト</p>
+                    <p>
+                        <img
+                            src="img/3416847_s.jpg"
+                            alt=""
+                        />アスパラベーコン巻き〇〇△△
+                    </p>
+                    <a href="#" class="btn btn-outline-primary"
+                        >いいねリスト一覧</a
+                    >
+                </div>
+            </div>
+        </div>
+        ​
+        <!--終了-->
+        ​
+        <!--↓ここからフッター↓ー-->
+        <div class="footer">
+            <p>©QuestAcademia-Team White</p>
+        </div>
+    </body>
 </html>
