--- a/mock/resipi_syusei_3.html
+++ b/mock/resipi_syusei_3.html
@@ -7,53 +7,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/resipi_toukou_syusei.css">
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Quicksand:wght@600&display=swap"
     rel="stylesheet">
-  <title></title>
+  <title>レシピ投稿_修正</title>
   <style type="text/css">
-    <!--
-    /*　『ファイルを開く』の「選択されていません」というメッセージを消す*/
-    @media screen {
-      #filename {
-        display: none;
-      }
-    }
-
-    /*ファイルを開くのファイル選択用ダイアログボックスを開くためのボタンを置く　*/
-    .browse_btn {
-      background-color: #d3d3d3;
-      padding: 6px;
-      border-radius: 8px;
-      font-weight: bold;
-    }
-
-    /*『修正』の背景を黄緑・字を白*/
-    .green {
-      color: white;
-      background-color: #66FF99;
-    }
-
-    .ranking {
-  border-bottom: solid 10px;
-  border-color:  #FFA500;
-}
-
-.ranking {
-  border-bottom: solid 10px;
-  border-color:  #FFA500;
-}
-
-@media screen and (max-width: 480px) {
-  .input_left {
-    margin-left: 0%;
-}
-
-.browse_btn {
-    padding: 1px 15px !important;
-}
-}
-
-    -->
   </style>
 </head>
 
