--- a/mock/resipi_toukou-1.html
+++ b/mock/resipi_toukou-1.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/resipi_toukou_syusei.css">
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Quicksand:wght@600&display=swap"
     rel="stylesheet">
-  <title>レシピ投稿-1</title>
+  <title>レシピ投稿_修正</title>
   <style type="text/css">
   </style>
 </head>
@@ -68,12 +68,15 @@
       </div>
     </div>
     ​
-    <div class="container"></div>
+    <div class="container">
       <div class="row">
-        <div class="col-md-11 offset-md-1">
+        <div class="col-md-2 offset-md-1">
           <h4>レシピの投稿</h4>
         </div>
-
+        <div class="col-md-１">
+        </div>
+        <div class="col-md-5">
+        </div>
 
         <div class="col-md-4 offset-md-1">
           <label for="name">料理名 <span class="badge badge-danger">必須</span></label>
