--- a/mock/resipi_syusei_3.html
+++ b/mock/resipi_syusei_3.html
@@ -181,36 +181,36 @@
 
         <div class="col-md-11 offset-md-1">
           <ol>
-            <li><label class="left_label1" for="count"></label><input class="waku1 input_left"  type="text" size="52 name=" text5"><label
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left"  type="text" size="52" name="text5"><label
                 class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
                   size="16" id="filename"></label></li>
-            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text5"><label
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text6”><label
                 class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
                   size="16" id="filename"></label></li>
-            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text6"><label
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text7”><labe
                 class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                          size="16" id="filename"></label></li>
-                    <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text7"><label
-                        class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                          size="16" id="filename"></label></li>
-                        <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text8"><label
-                            class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                              size="16" id="filename"></label></li>
-                        <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text9"><label
-                            class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                              size="16" id="filename"></label></li>
-                        <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text10"><label
-                            class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                              size="16" id="filename"></label></li>
-                        <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text10"><label
-                            class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
-                      size="16" id="filename"></label></li>
-            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text5"><label
+                  size="16" id="filename"></labe></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text8”><label
                 class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
                   size="16" id="filename"></label></li>
-            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52 name=" text5"><label
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text9”><label
                 class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
                   size="16" id="filename"></label></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text10”><label
+                class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
+                  size="16" id="filename"></label></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text10”><label
+                class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
+          size="16" id="filename"></label></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text11”><label
+                class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
+                  size="16" id="filename"></label></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text12”><label
+                class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
+                  size="16" id="filename"></label></li>
+            <li><label class="left_label1" for="count"></label><input class="waku1 input_left" type="text" size="52" name=”text13”><label
+              class="right_label" for="filename"><span class="browse_btn btn-left">ファイルを選択</span><input type="file"
+                        size="16" id="filename"></label></li>
           </ol>
         </div>
 
