--- a/mock/login.html
+++ b/mock/login.html
@@ -12,7 +12,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/login.css">
     <link
       rel="stylesheet"
@@ -71,7 +71,7 @@
           <div class="row mb-3 text-center">
             <div class="offset-md-8 col-sm-4 transparent">
               <form action="" method="POST">
-                <h3>ログイン</h3>
+                <h3 class="blue">ログイン</h3>
               </form>
 
                 <div class="form-group">
@@ -100,8 +100,8 @@
                 </div>
 
               <button type="submit">ログイン</button>
-              <div  class="text-left"><a href="">新規ログイン</a></div>
-              <div class="text-left"><a href="">ログインできない方はこちら</a></div>
+              <div  class="text-left"><a class="login" href="">新規ログイン</a></div>
+              <div class="text-left"><a class="" href="">ログインできない方はこちら</a></div>
             </div>
         </div>
       </div>
