つくり方表示のデザインを実装

--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -101,7 +101,7 @@
             </span>
           </div>
           <div class="mb-5">
-            <p class="process_bar">材料</p>
+            <p class="content_bar">材料</p>
             <div class="material_content mt-4 pb-2 d-flex justify-content-between">
               <span class="material_name">アスパラ</span>
               <span class="material_amount">５本</span>
@@ -113,6 +113,24 @@
             <div class="material_content mt-4 pb-2 d-flex justify-content-between">
               <span class="material_name">こしょう</span>
               <span class="material_amount">少々</span>
+            </div>
+          </div>
+          <div class="mb-5">
+            <p class="content_bar">つくり方</p>
+            <div class="process_content align-items-center mt-4 pb-2 d-flex">
+              <img class="process_img mr-4" src="./img/1.png">
+              <span class="process_content">アスパラを半分に切る</span>
+              <img src="" alt="画像">
+            </div>
+            <div class="process_content align-items-center mt-4 pb-2 d-flex">
+              <img class="process_img mr-4" src="./img/2.png">
+              <span class="process_content">アスパラを茹でて、ベーコンを巻いて焼く</span>
+              <img src="" alt="画像">
+            </div>
+            <div class="process_content align-items-center mt-4 pb-2 d-flex">
+              <img class="process_img mr-4" src="./img/3.png">
+              <span class="process_content">こしょうを降って出来上がり</span>
+              <img src="" alt="画像">
             </div>
           </div>
         </div>
