--- a/mocks/resipe_show.html
+++ b/mocks/resipe_show.html
@@ -82,10 +82,10 @@
   </div>
   <div class="container">
     <div class="row mt-4">
-      <div class="col-sm-9">
+      <div class="col-sm-8">
         <div class="repsipe_details mb-5">
 
-          <p class="resipe_title mt-3 ml-4">アスパラのベーコン巻き</p>
+          <p class="resipe_title pt-4 mt-3 ml-4">アスパラのベーコン巻き</p>
           <div class="text-center">
             <img class="resipe_detail_image mb-5" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
           </div>
@@ -135,15 +135,16 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3">
-        <div class="everyone_resipe text-center">
-          <p>みんなの作ってみた</p>
+      <div class="col-sm-4">
+        <div class="everyone_resipe text-center pt-5">
+          <p class="everyone_resipe_title" >みんなの作ってみた</p>
           <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-          <p>投稿者名</p>
+          <p class="contributor_name">投稿者名</p>
           <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-          <p>投稿者名</p>
+          <p class="contributor_name">投稿者名</p>
           <img class="everyone_resipe_image" src="img/3416847_s.jpg" alt="アスパラのベーコン巻き">
-          <p>投稿者名</p>
+          <p class="contributor_name">投稿者名</p>
+          <p class="text-right mr-3" style="color:#CDCFE3;">さらに表示</p>
         </div>
       </div>
     </div>
